Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15278

ASSERTION( equi(!strcmp(name, XATTR_LUSTRE_LOV) || !strcmp(name, XATTR_NAME_LOV), !lod_dt_obj(dt)->ldo_comp_cached)))

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      [341197.549203] LustreError: 27243:0:(lod_object.c:4483:lod_xattr_set()) ASSERTION( (!!(!strcmp(name, "lustre.""lov") || !strcmp(name, "trusted.lov")) == !!(!lod_dt_obj(dt)->ldo_comp_cached)) ) failed: 
      [341197.553942] LustreError: 27243:0:(lod_object.c:4483:lod_xattr_set()) LBUG
      [341197.556044] Pid: 27243, comm: mdt_rdpg00_041 3.10.0-1160.31.1.el7_lustre.ddn15.x86_64 #1 SMP Fri Jul 2 13:54:06 PDT 2021
      [341197.556047] Call Trace:
      [341197.556110] [<0>] libcfs_call_trace+0x90/0xf0 [libcfs]
      [341197.556118] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [341197.556157] [<0>] lod_xattr_set+0xcd9/0xd40 [lod]
      [341197.556196] [<0>] mdo_xattr_set+0x75/0x190 [mdd]
      [341197.556210] [<0>] mdd_xattr_set+0x159f/0x18c0 [mdd]
      [341197.556273] [<0>] mo_xattr_set+0x46/0x48 [mdt]
      [341197.556293] [<0>] mdt_close_handle_layouts+0x8b0/0xc10 [mdt]
      [341197.556309] [<0>] mdt_mfd_close+0x543/0x870 [mdt]
      [341197.556325] [<0>] mdt_close_internal+0x121/0x220 [mdt]
      [341197.556340] [<0>] mdt_close+0x25b/0x7d0 [mdt]
      [341197.556590] [<0>] tgt_request_handle+0xaee/0x15f0 [ptlrpc]
      [341197.556643] [<0>] ptlrpc_server_handle_request+0x24b/0xab0 [ptlrpc]
      [341197.556696] [<0>] ptlrpc_main+0xb34/0x1470 [ptlrpc]
      [341197.556702] [<0>] kthread+0xd1/0xe0
      [341197.556707] [<0>] ret_from_fork_nospec_begin+0x7/0x21
      [341197.556847] [<0>] 0xfffffffffffffffe
      [341197.556857] Kernel panic - not syncing: LBUG
      
      Reading symbols from /root/work/lustre/lustre/mdd/mdd.ko...done.
      (gdb) l *(mdd_xattr_set+0x159f)
      0x2f3cf is in mdd_xattr_set (/root/work/lustre/lustre/mdd/mdd_object.c:1619).
      1614		if (rc != 0)
      1615			GOTO(out, rc);
      1616	
      1617		rc = mdo_xattr_set(env, obj, buf_vic, XATTR_NAME_LOV, LU_XATTR_MERGE,
      1618				   handle);
      1619		if (rc)
      1620			GOTO(out, rc);
      1621	
      1622		rc = mdo_xattr_del(env, vic, XATTR_NAME_LOV, handle);
      1623		if (rc)
      

      It shows that a mirror extend prepared a merged layout stored in lod_object in declare phase, but in the transaction execution phase the in-memory layout has been changed by others.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: